# miche

./: .gitignore  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: platform.yml
docs/: ci_branch_protection.md  friend_install.md  island_craft_checklist.md  miche_platform_thesis.md  naming_canon.yaml  openapi_platform_v0.yaml  router_modes.md
docs/decisions/: 2026-06-mplat2-reconciliation.md  island-craft-signoff.md  miche-platform-v1.md  miche-platform-v2.md  orchestration-ui.md  router-mode-honesty.md
harness/: miche_platform_capstone_drill.sh
interfaces/: miche_app_registry.yaml  miche_mascot.yaml
interfaces/profiles/: friend.yaml  operator_default.yaml
interfaces/schemas/: miche_app_registry.schema.json
miche/: __init__.py  __main__.py  health_probe.py  registry.py  voice_ingest.py  web.py
miche/adapters/: __init__.py  caffenagent_actions.py  (+1 more)
schemas/: miche_action_item.json  miche_focus_handoff.json  miche_information_item.json  miche_install_profile.json  miche_router_decision.json
scripts/: check_platform.sh  check_platform_registry.py  unblock_mplat2.sh
tests/: test_action_inbox.py  test_action_schema.py  test_check_platform_script.py  test_focus_bridge.py  test_home_shell.py  test_information_inbox.py  test_intent_router.py  test_mascot_persona.py  test_miche_app_registry.py  test_miche_apps_routes.py  test_miche_health_probe.py  test_miche_island_thread.py  test_miche_island_utterance.py  test_miche_voice_ingest.py  test_orchestration.py  test_platform_capstone.py  test_tenancy.py
(+84 files in other folders)
