[project]
name = "miche"
version = "0.1.0"
description = "Miche Platform — OS shell for operator home, inbox, and floating island."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.1",
  "httpx>=0.27",
  "jinja2>=3.1",
  "jsonschema>=4.23",
  "pyyaml>=6.0",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[project.scripts]
miche = "miche.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["miche"]

[tool.hatch.build.targets.wheel.force-include]
"interfaces" = "interfaces"
"miche/templates" = "miche/templates"
"miche/static" = "miche/static"